[gd_scene load_steps=3 format=3 uid="uid://crg4eadjsh7mt"]

[ext_resource type="Script" path="res://Scripts/end_scene.gd" id="1_1o5ff"]
[ext_resource type="FontFile" uid="uid://cgjb6jrftgchw" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="1_o8shl"]


[node name="EndScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1o5ff")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -234.0
offset_right = 72.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 0

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_o8shl")
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_o8shl")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
